--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,8 +22,9 @@ futures = "0.3"
 itertools = "0.14"
 specta-typescript = "=0.0.9"
 tauri-plugin-dialog = "2.2"
+tauri-plugin-fs = "2.2"
+tauri-plugin-persisted-scope = "2.2"
 tauri-plugin-pinia = "3.3"
-tauri-plugin-process = "2.2"
 
 [dependencies.serde]
 version = "1.0"
@@ -46,6 +47,7 @@ version = "1.44"
 features = ["full"]
 
 [target."cfg(windows)".dependencies]
+tauri-plugin-process = "2.2"
 tauri-plugin-single-instance = "2.2"
 tauri-plugin-window-state = "2.2"
 
