--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-dialog": "^2.2.1",
+    "@tauri-apps/plugin-fs": "^2.2.1",
     "@tauri-apps/plugin-process": "^2.2.1",
     "@tauri-store/pinia": "^3.3.0",
     "@tb-dev/utils": "^6.0.3",
