chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "eslint . --config eslint.config.js",
     "format": "prettier . --write && cargo fmt --all",
     "preview": "cargo tauri build --no-bundle -- --profile preview",
+    "type-check": "vue-tsc --noEmit",
     "update": "miho update major -t",
     "vite:build": "vite build",
     "vite:dev": "vite dev"
@@ -22,7 +23,8 @@
     "@tauri-apps/plugin-process": "^2.2.1",
     "@tauri-store/pinia": "^3.4.0",
     "@tb-dev/utils": "^6.0.4",
-    "@tb-dev/vue": "^1.0.0",
+    "@tb-dev/vue": "^2.0.0",
+    "@tb-dev/vue-components": "^0.1.0",
     "@vueuse/core": "^13.1.0",
     "lucide-vue-next": "^0.509.0",
     "pinia": "^3.0.2",
