--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tauri-vue-template",
   "version": "0.1.0",
   "type": "module",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.0",
   "private": true,
   "scripts": {
     "build": "cargo tauri build",
@@ -18,29 +18,30 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.5.0",
-    "@tauri-apps/plugin-dialog": "^2.2.1",
-    "@tauri-apps/plugin-fs": "^2.2.1",
+    "@tauri-apps/plugin-dialog": "^2.2.2",
+    "@tauri-apps/plugin-fs": "^2.3.0",
     "@tauri-apps/plugin-process": "^2.2.1",
-    "@tauri-store/pinia": "^3.4.0",
-    "@tb-dev/utils": "^6.0.4",
-    "@tb-dev/vue": "^2.0.0",
-    "@tb-dev/vue-components": "^0.1.0",
-    "@vueuse/core": "^13.1.0",
-    "lucide-vue-next": "^0.509.0",
+    "@tauri-store/pinia": "^3.6.0",
+    "@tauri-store/vue": "^0.1.1",
+    "@tb-dev/utils": "^7.0.2",
+    "@tb-dev/vue": "^2.0.5",
+    "@tb-dev/vue-components": "^0.2.4",
+    "@vueuse/core": "^13.3.0",
+    "lucide-vue-next": "^0.511.0",
     "pinia": "^3.0.2",
-    "vue": "^3.5.13",
+    "vue": "^3.5.15",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.6",
-    "@tb-dev/eslint-config": "^7.1.3",
-    "@types/node": "^22.15.17",
+    "@tailwindcss/vite": "^4.1.7",
+    "@tb-dev/eslint-config": "^7.1.5",
+    "@types/node": "^22.15.23",
     "@vitejs/plugin-vue": "^5.2.4",
-    "eslint": "^9.26.0",
+    "eslint": "^9.27.0",
     "prettier": "^3.5.3",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.6",
+    "tailwindcss": "^4.1.7",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
