--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "tauri-vue-template",
   "version": "0.1.0",
   "type": "module",
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@10.14.0",
+  "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
     "build": "cargo tauri build",
     "clippy": "cargo +nightly clippy --workspace",
     "dev": "cargo tauri dev",
     "eslint": "eslint . --config eslint.config.js",
-    "format": "prettier . --write && cargo fmt --all",
+    "format": "dprint fmt && cargo fmt --all",
     "preview": "cargo tauri build --no-bundle -- --profile preview",
     "type-check": "vue-tsc --noEmit",
     "update": "miho update major -t",
@@ -18,33 +19,33 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.7.0",
-    "@tauri-apps/plugin-dialog": "^2.3.1",
+    "@tauri-apps/plugin-dialog": "^2.3.2",
     "@tauri-apps/plugin-fs": "^2.4.1",
     "@tauri-apps/plugin-process": "^2.3.0",
     "@tauri-store/pinia": "^3.7.1",
     "@tauri-store/vue": "^1.0.0",
-    "@tb-dev/utils": "^7.0.8",
-    "@tb-dev/vue": "^2.0.14",
-    "@tb-dev/vue-components": "^5.0.2",
-    "@vueuse/core": "^13.5.0",
-    "lucide-vue-next": "^0.525.0",
+    "@tb-dev/utils": "^7.0.11",
+    "@tb-dev/vue": "^3.1.2",
+    "@tb-dev/vue-components": "^5.2.0",
+    "@vueuse/core": "^13.6.0",
+    "@vueuse/router": "^13.6.0",
+    "lucide-vue-next": "^0.539.0",
     "pinia": "^3.0.3",
+    "tw-animate-css": "^1.3.7",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "@tb-dev/eslint-config": "^8.0.3",
-    "@types/node": "^24.1.0",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "eslint": "^9.31.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-css-order": "^2.1.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.12",
+    "@tb-dev/eslint-config": "^8.0.5",
+    "@types/node": "^24.3.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "eslint": "^9.33.0",
+    "tailwindcss": "^4.1.12",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.6",
-    "vue-tsc": "^3.0.3"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.2",
+    "vue-tsc": "^3.0.5"
   }
 }
