--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,8 +23,8 @@ itertools = "0.14"
 tauri-plugin-dialog = "2.3"
 tauri-plugin-fs = "2.4"
 tauri-plugin-persisted-scope = "2.3"
-tauri-plugin-pinia = "3.7"
-tauri-plugin-vue = "1.0"
+tauri-plugin-pinia = "3"
+tauri-plugin-vue = "1"
 
 [dependencies.serde]
 version = "1.0"
@@ -35,17 +35,17 @@ version = "2.7"
 features = ["protocol-asset", "rustls-tls"]
 
 [dependencies.tokio]
-version = "1.46"
+version = "1.47"
 features = ["full"]
 
 [target."cfg(windows)".dependencies]
 tauri-plugin-process = "2.3"
 tauri-plugin-single-instance = "2.3"
-tauri-plugin-window-state = "2.3"
+tauri-plugin-window-state = "2.4"
 
 [target."cfg(windows)".dependencies.tauri-plugin-prevent-default]
-version = "2.1"
-features = ["unstable-windows"]
+version = "3"
+features = ["platform-windows"]
 
 [build-dependencies.tauri-build]
 version = "2.3"
