--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,8 @@ workspace = true
 anyhow = "1.0"
 futures = "0.3"
 itertools = "0.14"
-tauri-plugin-dialog = "2.3"
+serde_json = "1.0"
+tauri-plugin-dialog = "2.4"
 tauri-plugin-fs = "2.4"
 tauri-plugin-persisted-scope = "2.3"
 tauri-plugin-pinia = "3"
@@ -31,7 +32,7 @@ version = "1.0"
 features = ["derive"]
 
 [dependencies.tauri]
-version = "2.7"
+version = "2.8"
 features = ["protocol-asset", "rustls-tls"]
 
 [dependencies.tokio]
@@ -48,5 +49,5 @@ version = "3"
 features = ["platform-windows"]
 
 [build-dependencies.tauri-build]
-version = "2.3"
+version = "2.4"
 features = []
