--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "tauri-vue-template",
   "version": "0.1.0",
   "type": "module",
-  "packageManager": "pnpm@10.15.1",
+  "packageManager": "pnpm@10.17.0",
   "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
     "build": "cargo tauri build",
     "clippy": "cargo +nightly clippy --workspace",
     "dev": "cargo tauri dev",
-    "eslint": "eslint . --config eslint.config.js",
+    "eslint": "eslint . --config eslint.config.ts",
     "format": "dprint fmt && cargo fmt --all",
     "preview": "cargo tauri build --no-bundle -- --profile preview",
     "type-check": "vue-tsc --noEmit",
@@ -22,14 +22,15 @@
     "@tauri-apps/plugin-dialog": "^2.4.0",
     "@tauri-apps/plugin-fs": "^2.4.2",
     "@tauri-apps/plugin-process": "^2.3.0",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "@tauri-store/pinia": "^3.7.1",
     "@tauri-store/vue": "^1.0.0",
     "@tb-dev/utils": "^7.0.14",
-    "@tb-dev/vue": "^3.2.4",
+    "@tb-dev/vue": "^3.3.0",
     "@tb-dev/vue-components": "^6.0.0",
     "@vueuse/core": "^13.9.0",
     "@vueuse/router": "^13.9.0",
-    "lucide-vue-next": "^0.542.0",
+    "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
     "tw-animate-css": "^1.3.8",
     "vue": "^3.5.21",
@@ -38,14 +39,15 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
-    "@tb-dev/eslint-config": "^8.0.10",
-    "@types/node": "^24.3.1",
+    "@tauri-apps/cli": "^2.8.4",
+    "@tb-dev/eslint-config": "^8.0.11",
+    "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^6.0.1",
-    "eslint": "^9.35.0",
+    "eslint": "^9.36.0",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
-    "vite": "^7.1.4",
-    "vue-tsc": "^3.0.6"
+    "vite": "^7.1.6",
+    "vue-tsc": "^3.0.7"
   }
 }
