--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ tauri-plugin-dialog = "2.4"
 tauri-plugin-fs = "2.4"
 tauri-plugin-persisted-scope = "2.3"
 tauri-plugin-pinia = "3"
+tauri-plugin-updater = "2.9"
 tauri-plugin-vue = "1"
 
 [dependencies.serde]
