--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "tauri-vue-template",
   "version": "0.1.0",
   "type": "module",
-  "packageManager": "pnpm@10.19.0",
+  "packageManager": "pnpm@10.23.0",
   "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
     "build": "cargo tauri build",
-    "clippy": "cargo +nightly clippy --workspace",
+    "clippy": "cargo clippy --workspace",
     "dev": "cargo tauri dev",
     "eslint": "eslint . --config eslint.config.ts",
     "format": "dprint fmt && cargo fmt --all",
@@ -25,29 +25,29 @@
     "@tauri-apps/plugin-updater": "^2.9.0",
     "@tauri-store/pinia": "^4.1.0",
     "@tauri-store/vue": "^2.1.0",
-    "@tb-dev/utils": "^7.0.17",
-    "@tb-dev/vue": "^3.3.3",
-    "@tb-dev/vue-components": "^6.0.3",
+    "@tb-dev/utils": "^7.0.18",
+    "@tb-dev/vue": "^3.4.0",
+    "@tb-dev/vue-components": "^7.0.0",
     "@vueuse/core": "^14.0.0",
     "@vueuse/router": "^14.0.0",
-    "lucide-vue-next": "^0.548.0",
-    "pinia": "^3.0.3",
+    "lucide-vue-next": "^0.554.0",
+    "pinia": "^3.0.4",
     "tw-animate-css": "^1.4.0",
-    "vue": "^3.5.22",
+    "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.16",
-    "@tauri-apps/cli": "^2.9.1",
-    "@tb-dev/eslint-config": "^8.1.0",
-    "@types/node": "^24.9.1",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "eslint": "^9.38.0",
-    "tailwindcss": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.17",
+    "@tauri-apps/cli": "^2.9.4",
+    "@tb-dev/eslint-config": "^8.1.1",
+    "@types/node": "^24.10.1",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "eslint": "^9.39.1",
+    "tailwindcss": "^4.1.17",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "vite": "^7.1.12",
-    "vue-tsc": "^3.1.2"
+    "vite": "^7.2.4",
+    "vue-tsc": "^3.1.5"
   }
 }
